--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,25 +1,38 @@
 spring.application.name=api-gateway
-
 server.port=8080
 
-# Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-# Spring Cloud Gateway Configuration
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-spring.cloud.gateway.routes[0].id=user-service
-spring.cloud.gateway.routes[0].uri=lb://user-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**,/api/login/**,/api/register/**
-spring.cloud.gateway.routes[0].predicates[1]=Method=GET,POST,PUT,DELETE
+# --- Routes ---
 
-spring.cloud.gateway.routes[1].id=catalog-service
-spring.cloud.gateway.routes[1].uri=lb://catalog-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/books/**,/api/authors/**,/api/genres/**
-spring.cloud.gateway.routes[1].predicates[1]=Method=GET,POST,PUT,DELETE
+# USER SERVICE
+#spring.cloud.gateway.routes[0].id=user-service-route
+#spring.cloud.gateway.routes[0].uri=lb://user-service
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
+#spring.cloud.gateway.routes[0].predicates[1]=Path=/api/login/**
+#spring.cloud.gateway.routes[0].predicates[3]=Method=GET,POST,PUT,DELETE
+#
+## CATALOG SERVICE
+#spring.cloud.gateway.routes[1].id=catalog-service
+#spring.cloud.gateway.routes[1].uri=lb://catalog-service
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/books/**,/api/authors/**,/api/genres/**
+#spring.cloud.gateway.routes[1].predicates[1]=Method=GET,POST,PUT,DELETE
+#
+## CHECKOUT SERVICE
+#spring.cloud.gateway.routes[2].id=checkout-service
+#spring.cloud.gateway.routes[2].uri=lb://checkout-service
+#spring.cloud.gateway.routes[2].predicates[0]=Path=/api/carts/**,/api/orders/**
+#spring.cloud.gateway.routes[2].predicates[1]=Method=GET,POST,PUT,DELETE
 
-spring.cloud.gateway.routes[2].id=order-service
-spring.cloud.gateway.routes[2].uri=lb://order-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/carts/**,/api/orders/**
-spring.cloud.gateway.routes[2].predicates[1]=Method=GET,POST,PUT,DELETE
+# Logging
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# JWT Auth (Enable after test)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
