--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=checkout-service
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_checkout_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_checkout_service_db?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,4 +12,4 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 eureka.instance.hostname=localhost
-eureka.instance.instance-id=${spring.application.name}:${instance_id}
+eureka.instance.instance-id=${spring.application.name}:${server.port}
