--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_user_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_user_service_db?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,4 +13,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 eureka.instance.hostname=localhost
-eureka.instance.instance-id=${spring.application.name}:${instance_id}
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+
