--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -15,3 +15,7 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
+# In user-service
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+# Or:
+# spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9000/oauth2/jwks
