--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ eureka.client.fetch-registry=true
 
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${server.port}
+
+user-service.base-url=http://localhost:8081
+catalog-service.base-url=http://localhost:8082
