--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.4</version> <!-- Use your Spring Boot version -->
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.5.4</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.nirmalks.bookstore</groupId>
 	<artifactId>api_gateway</artifactId>
@@ -15,7 +15,7 @@
 	<description>API Gateway for Bookstore Microservices</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2025.0.0</spring-cloud.version> <!-- Use your Spring Cloud version -->
+		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,14 +30,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
-		<!-- REQUIRED: Spring Boot Starter for OAuth2 Resource Server -->
-		<!-- This provides the BearerTokenAuthenticationWebFilter and other JWT validation components -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
-		<!-- Ensure spring-boot-starter-security is also present for general Spring Security features -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
