--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,34 +5,46 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# --- Routes ---
-
-# USER SERVICE
-#spring.cloud.gateway.routes[0].id=user-service-route
-#spring.cloud.gateway.routes[0].uri=lb://user-service
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
-#spring.cloud.gateway.routes[0].predicates[1]=Path=/api/login/**
-#spring.cloud.gateway.routes[0].predicates[3]=Method=GET,POST,PUT,DELETE
-#
-## CATALOG SERVICE
-#spring.cloud.gateway.routes[1].id=catalog-service
-#spring.cloud.gateway.routes[1].uri=lb://catalog-service
-#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/books/**,/api/authors/**,/api/genres/**
-#spring.cloud.gateway.routes[1].predicates[1]=Method=GET,POST,PUT,DELETE
-#
-## CHECKOUT SERVICE
-#spring.cloud.gateway.routes[2].id=checkout-service
-#spring.cloud.gateway.routes[2].uri=lb://checkout-service
-#spring.cloud.gateway.routes[2].predicates[0]=Path=/api/carts/**,/api/orders/**
-#spring.cloud.gateway.routes[2].predicates[1]=Method=GET,POST,PUT,DELETE
-
-# Logging
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-# Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-# JWT Auth (Enable after test)
+# JWT Auth
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+
+# --- User Auth Service ---
+resilience4j.circuitbreaker.instances.userAuthCB.sliding-window-size=10
+resilience4j.circuitbreaker.instances.userAuthCB.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.userAuthCB.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.userAuthCB.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.userAuthCB.automatic-transition-from-open-to-half-open-enabled=true
+
+# --- User Service ---
+resilience4j.circuitbreaker.instances.userApiCB.sliding-window-size=10
+resilience4j.circuitbreaker.instances.userApiCB.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.userApiCB.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.userApiCB.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.userApiCB.automatic-transition-from-open-to-half-open-enabled=true
+
+# --- Catalog Service ---
+resilience4j.circuitbreaker.instances.catalogCB.sliding-window-size=10
+resilience4j.circuitbreaker.instances.catalogCB.failure-rate-threshold=1
+resilience4j.circuitbreaker.instances.catalogCB.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.catalogCB.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.catalogCB.automatic-transition-from-open-to-half-open-enabled=true
+
+# --- Checkout Service ---
+resilience4j.circuitbreaker.instances.checkoutCB.sliding-window-size=10
+resilience4j.circuitbreaker.instances.checkoutCB.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.checkoutCB.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.checkoutCB.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.checkoutCB.automatic-transition-from-open-to-half-open-enabled=true
+
+# --- Auth Server ---
+resilience4j.circuitbreaker.instances.authServerCB.sliding-window-size=10
+resilience4j.circuitbreaker.instances.authServerCB.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.authServerCB.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.authServerCB.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.authServerCB.automatic-transition-from-open-to-half-open-enabled=true
