Add zipkin for tracing

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -15,5 +15,10 @@ eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9001
 
+management.tracing.enabled=true
+management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.include-application-name=false
