--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,7 +12,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 # JWT Auth
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9001
 
 # --- User Auth Service ---
 resilience4j.circuitbreaker.instances.userAuthCB.sliding-window-size=10
@@ -48,3 +48,7 @@ resilience4j.circuitbreaker.instances.authServerCB.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.authServerCB.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.authServerCB.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.authServerCB.automatic-transition-from-open-to-half-open-enabled=true
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
