--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9000
+server.port=9001
 spring.application.name=auth-server
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_auth_db
@@ -16,3 +16,12 @@ logging.level.org.springframework.security.web=DEBUG
 logging.level.com.nirmalks.bookstore.auth_server=DEBUG
 logging.level.org.springframework.web.reactive.function.client=DEBUG
 logging.level.org.springframework.security.authentication=DEBUG
+
+auth-server.base-url=http://localhost:${server.port}
+auth-server.token-uri=${auth-server.base-url}/api/oauth2/token
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.include-application-name=false
