--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -13,3 +13,7 @@ eureka.client.fetch-registry=true
 
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${server.port}
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
