--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -16,3 +16,9 @@ eureka.instance.instance-id=${spring.application.name}:${server.port}
 
 user-service.base-url=http://localhost:8081
 catalog-service.base-url=http://localhost:8082
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.include-application-name=false
