Add prometheus for all services and enable them in actuator to scrape, add docker compose for zipkin, prometheus and grafana

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -9,6 +9,9 @@ logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 management.endpoint.health.show-details=always
 
 # JWT Auth
