--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -70,6 +70,11 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-observation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
