--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -17,3 +17,7 @@ eureka.instance.instance-id=${spring.application.name}:${server.port}
 management.tracing.enabled=true
 management.tracing.sampling.probability=1
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
