--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
