--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -22,3 +22,7 @@ management.tracing.sampling.probability=1
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
+
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
