--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      -  ./alert.rules.yml:/etc/prometheus/alert.rules.yml
     ports:
       - "9090:9090"
 
@@ -25,3 +26,10 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
