--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,6 +1,8 @@
 global:
   scrape_interval: 5s
 
+rule_files:
+  - "/etc/prometheus/alert.rules.yml"
 scrape_configs:
   - job_name: 'api-gateway'
     metrics_path: '/actuator/prometheus'
@@ -27,3 +29,9 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ 'host.docker.internal:8761']
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - "host.docker.internal:9093"
