--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>discovery-service</module>
         <module>api-gateway</module>
         <module>auth-server</module>
+        <module>config-server</module>
     </modules>
     <dependencyManagement>
         <dependencies>
