Add config server properties and remove properties from individual services

--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -1,23 +1,5 @@
-spring.application.name=catalog-service
-server.port=8082
-
-spring.datasource.url=jdbc:postgresql://catalog-db:5432/bookstore_catalog_service_db?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=admin123
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-eureka.instance.hostname=catalog-service
-eureka.instance.instance-id=${spring.application.name}:${server.port}
-
-management.tracing.enabled=true
-management.tracing.sampling.probability=1
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
-
-management.endpoints.web.exposure.include=prometheus,health,info
-management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.name=catalog-service
