--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -9,6 +9,7 @@ COPY shared-utils/pom.xml shared-utils/
 COPY discovery-service/pom.xml discovery-service/
 COPY api-gateway/pom.xml api-gateway/
 COPY auth-server/pom.xml auth-server/
+COPY config-server/pom.xml config-server/
 
 COPY shared-utils/src shared-utils/src
 
