--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,26 +1,2 @@
-server.port=9001
-spring.application.name=auth-server
-
-eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
-eureka.instance.hostname=auth-server
-user-service.base-url=http://user-service:8081
-
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
-logging.level.org.springframework.security.web=DEBUG
-logging.level.com.nirmalks.bookstore.auth_server=DEBUG
-logging.level.org.springframework.web.reactive.function.client=DEBUG
-logging.level.org.springframework.security.authentication=DEBUG
-
-auth-server.base-url=http://auth-server:${server.port}
-auth-server.token-uri=${auth-server.base-url}/api/oauth2/token
-
-management.tracing.enabled=true
-management.tracing.sampling.probability=1
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
-logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
-logging.include-application-name=false
-
-management.endpoints.web.exposure.include=prometheus,health,info
-management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.name=auth-server
