--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,7 +1,6 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY pom.xml .
-
 COPY catalog-service/pom.xml catalog-service/
 COPY checkout-service/pom.xml checkout-service/
 COPY user-service/pom.xml user-service/
@@ -9,17 +8,17 @@ COPY shared-utils/pom.xml shared-utils/
 COPY discovery-service/pom.xml discovery-service/
 COPY api-gateway/pom.xml api-gateway/
 COPY auth-server/pom.xml auth-server/
-COPY config-server/pom.xml config-server/
-
 COPY shared-utils/src shared-utils/src
+COPY config-server/pom.xml config-server/
 
 RUN mvn clean install -DskipTests -pl shared-utils -am
 RUN mvn dependency:go-offline -B
 COPY . .
-RUN mvn clean package -DskipTests -pl catalog-service -am
+
+RUN mvn clean package -DskipTests -pl config-server -am
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-ENV ARTIFACT_NAME=catalog-service
+ENV ARTIFACT_NAME=config-server
 COPY --from=build /app/${ARTIFACT_NAME}/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
