--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -79,7 +79,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.nirmalks.bookstore</groupId>
+            <artifactId>shared-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
